--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: 🛠 Android CI / Build & Release APK
 
 on:
   push:
-    branches: [main]
+    branches: [updatev0.0.3]
     tags: ["v*.*.*"]
   pull_request:
-    branches: [main]
+    branches: [updatev0.0.3]
 
 permissions:
   contents: write # allow creating/updating Releases & uploading assets
