--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         <meta-data android:name="flutterEmbedding" android:value="2" />
 
         <!-- Home Widget -->
-        <receiver android:name="com.sautify.player.MusicWidget" android:label="Sautify Player" android:exported="true">
+        <receiver android:name="com.sautify.player.MusicWidget" android:label="@string/widget_name" android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
